* io.c (extract_binmode): raise an exception if binmode/textmode   is specified with both vmode and opthash.   [ruby-core:42199] [Bug #5918]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@34359 b2dd03c8-39d4-4d8f-98ff-823fe69b080e